Correct the published field identity, log confidentiality, padding and paging of the CardDemo Java module
Online surface
- Card update returns BMS map identifiers from focusScreenFieldId, so the value
  honours its own published maxLength of seven instead of leaking DTO property
  names.
- Field errors name the property the emitting operation actually declares. Five
  names on the transaction-add, card-detail, report-request and account surfaces
  had drifted to internal working-storage names, and a structural audit now holds
  every constant against the record it names.
- Bill payment leaves the balance display blank on the arms that have already
  transmitted their screen, matching the legacy ordering where the two moves land
  after the map has gone out. An account that does not exist no longer reads as
  one that exists and owes nothing.
- Message fields are emitted as they were coded rather than space-filled to the
  screen width, and transaction free text is stored in its content form instead
  of re-padded to the copybook width.
- The account surface publishes the vocabulary its attentionKey parameter
  accepts; the accepted values are unchanged.

Confidentiality
- The shared datasource sets logServerErrorDetail=false, so a CHECK violation's
  detail - which PostgreSQL fills with the entire attempted row, card numbers and
  credential digests included - can no longer reach a log sink through the driver's
  exception message. What a failure discloses changes; whether it happens, and what
  the caller is told, does not.

Build and observability
- commons-logging is excluded from the three AWS starters that carried it in
  transitively, and OpenTelemetry moves to 1.56.0 to remove the sun.misc.Unsafe
  caller rather than silence its notice. Start-up is now free of the five
  unstructured lines that bypassed the logging pipeline.
- The scoped batch reader and writer beans are declared by their implementation
  class, because an interface-declared scoped bean is sk